--- a/README
+++ b/README
@@ -1,5 +1,7 @@
 Yocto BSP layer for Retronix's ARM platforms
 ==========================================================
 
+Yocto 5.4.70 for PICO project
+
 
 
